package tn.flashcards.model.settings;

import tn.flashcards.model.pile.Card;

public interface StrategyChoix {
    public void execute() ;
}
