package tn.flashcards.model.settings;

public enum Theme {
    CLAIR,
    FONCE,
    CONTRASTE
}
